--- a/plugin.yaml
+++ b/plugin.yaml
@@ -5,9 +5,9 @@
 plugins:
   aws:
     executor: central_deployment_agent
-    source: https://github.com/cloudify-cosmo/cloudify-aws-plugin/archive/1.4.3.zip
+    source: https://github.com/EarthmanT/cloudify-aws-plugin/archive/secret-store-aws.zip
     package_name: cloudify-aws-plugin
-    package_version: '1.4.3'
+    package_version: '1.4.3s.dev0'
 
 data_types:
 
