--- a/plugin.yaml
+++ b/plugin.yaml
@@ -8,6 +8,7 @@ plugins:
     source: https://github.com/EarthmanT/cloudify-aws-plugin/archive/secret-store-aws.zip
     package_name: cloudify-aws-plugin
     package_version: '1.4.3s.dev0'
+    install_arguments: '--process-dependency-links'
 
 data_types:
 
