taking out all of the stuff i added

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -6,9 +6,8 @@ plugins:
   aws:
     executor: central_deployment_agent
     source: https://github.com/EarthmanT/cloudify-aws-plugin/archive/secret-store-aws.zip
-    install_arguments: '--process-dependency-links'
-#    package_name: cloudify-aws-plugin
-#    package_version: '1.4.3s.dev0'
+    package_name: cloudify-aws-plugin
+    package_version: '1.4.3s.dev0'
 
 data_types:
 
